# mdaitest

./: .gitignore  CAMERA_CONTROL_FIX.md  CAMERA_FIX_SUMMARY.md  CAMERA_FLOW_DIAGRAM.md  CLEAN_REWRITE_SUMMARY.md  CONFIGURATION_GUIDE.txt  CSS_FULLSCREEN_FIX.md  DEBUG_PREVIEW_GUIDE.md  ENABLE_TEST_MODE.sh  EYE_TRACKING_IMPLEMENTATION.md  FACE_DETECTION_LOG_GUIDE.md  FINAL_IMPLEMENTATION_GUIDE.md  FLOW_TEST_GUIDE.md  HIEROGLYPH_ICON_IMPLEMENTATION.md  INSTALLATION_COMPLETE.md  LOGICAL_ERRORS_FIXED.md  MEDIAPIPE_PROCESSING_FIX.md  PREVIEW_DISABLED.md  PREVIEW_SYSTEM_EXPLAINED.md  PRODUCTION_LIVENESS_FIX.md  PYTHON_TOF_INTEGRATION_COMPLETE.md  QUICK_REFERENCE.md  QUICK_START_PYTHON_TOF.md  REALSENSE_CAMERA_EXPLAINED.md  REALSENSE_IDLE_DETECTION.md  REALSENSE_JETSON_OPTIMIZATIONS.md  SIMPLE_LIVENESS_APPROACH.md  START_HERE_TOF.md  TOF_DEBUGGING_GUIDE.md  TOF_PRODUCTION_READY.md  TOF_SESSION_FIX.md  debug_tof_live.py  reset_tof_sensor.py  start-mdai-kiosk.sh  test_tof_trigger.sh
controller/: =5.9  INTEGRATION.md  README.md  requirements.txt  start-mdai-backend.sh  wipi.py
controller/rgb_grabber/: BUILD.md  CMakeLists.txt
controller/rgb_grabber/include/: frame_publisher.hpp  rgb_grabber.hpp
controller/rgb_grabber/src/: frame_publisher.cpp  main.cpp  rgb_grabber.cpp
d435i/: __init__.py  mediapipe_liveness.py
deployment/: README.md  check-status.sh  mdai-browser.service  mdai-frontend.service  start-all.sh
logs/: controller-runtime.log.2025-09-29
md/: BULLETPROOF_SUMMARY.md  CAMERA_LIFECYCLE_FIX.md  DEBUG_PREVIEW_GUIDE.md  DEBUG_SESSION.md  DIRECTORY_STRUCTURE.md  (+15 more)
(+106 files in other folders)
